# anki-cli

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.claude/skills/write-note/: SKILL.md
.github/workflows/: ci.yml
scripts/: update_readme.py
src/anki_cli/: __init__.py  cli.py  client.py  stats.html
tests/: test_cli_export_import.py  test_cli_search.py
