[project]
name = "anki-cli"
version = "0.1.0"
description = "CLI for managing Anki flashcards via AnkiConnect"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "httpx>=0.27",
    "rapidfuzz>=3",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pre-commit>=4",
]

[project.scripts]
anki = "anki_cli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anki_cli"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
